--- a/microsoft/index.html
+++ b/microsoft/index.html
@@ -3,7 +3,8 @@
         <title>New tab</title>
         <link rel="icon" href="img/d7c748c0902ea176b76aca22b2b220a4.png" type="image/x-icon">
         <link rel="stylesheet" href="microdoft.css">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     </head>
     <body>
 
